--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BOOTCAMP DNC</title>
+    <title>G DNC</title>
     <link rel="stylesheet" href="style.css">
   
    
@@ -16,9 +16,63 @@
             <a href="">Requisitos para Participar</a>
         </div>
         <button>Login</button>
-
-
     </nav>
+    <section>
+        <header>
+            <h1> Bootcamp DNC</h1>
+
+            <h2>Esse será um evento exclusivo para todos os alunos <br>
+                da <b>DNC</b>, que querem <span class="Invert">acelerar a carreira</span>  com uma <br>
+                semana intensiva de conteúdo de mercado entre <br>
+                <span class="Invert">BACK-END, FRONT-END & BANCO DE DADOS.</span> </h2>
+
+        </header>
+
+        <form action="">
+            <div class="form-group">
+                <label for="">Nome</label>
+                <input type="text" placeholder="Insira seu nome aqui">
+            </div>
+
+            <div class="form-group">
+                <label for="">Sobre nome </label>
+                <input type="text" placeholder="Insira seu sobre nome aqui">
+            </div>
+
+            <div class="form-group">
+                <label for="">Área de interesse</label>
+                <div class="checkbox-itens">
+                    <input type="checkbox" value="front">
+                    <label>Front-End</label>
+
+                    <input type="checkbox" value="back">
+                    <label>Back-End</label>
+
+                    <input type="checkbox" value="bd">
+                    <label>Banco de Dados</label>
+                </div>
+                
+            </div>
+
+            <div class="form-group">
+                <label for="">E-mail</label>
+                <input type="email" placeholder="Insira seu E-mail aqui">
+            </div>
+
+            <div class="form-group">
+                <label for="">Telefone</label>
+                <input type="text" placeholder="(99) 99999-9999">
+            </div>
+
+            <div class="form-group">
+                <label for="">Insira uma frase criativa aqui</label>
+                <input type="text" placeholder="Qual frase criativa você gostaria de falar?">
+            </div>
+
+            <input type="submit" value="cadastrar"> 
+
+        </form>
+    </section>
     
 </body>
 </html>
